// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CurrentDOMModeUsageExample.jsx 1`] = `
<DocumentFragment>
  <div
    style="position: relative; height: 400px; overflow: hidden; text-align: center; background: rgb(250, 250, 250); border: 1px solid #ebedf0; border-radius: 2px;"
  >
    <div
      style="height: 100%; padding: 48px;"
    >
      渲染在当前元素中。
      <div
        style="margin-top: 16px;"
      >
        <div
          class="t-radio-group t-radio-group-outline t-radio-group-small"
        >
          <label
            class="t-radio-button"
            name="left"
          >
            <input
              class="t-radio-button__former"
              readonly=""
              type="radio"
            />
            <span
              class="t-radio-button__input"
            />
            <span
              class="t-radio-button__label"
            >
              left
            </span>
          </label>
          <label
            class="t-radio-button t-is-checked"
            name="right"
          >
            <input
              checked=""
              class="t-radio-button__former"
              readonly=""
              type="radio"
            />
            <span
              class="t-radio-button__input"
            />
            <span
              class="t-radio-button__label"
            >
              right
            </span>
          </label>
          <label
            class="t-radio-button"
            name="top"
          >
            <input
              class="t-radio-button__former"
              readonly=""
              type="radio"
            />
            <span
              class="t-radio-button__input"
            />
            <span
              class="t-radio-button__label"
            >
              top
            </span>
          </label>
          <label
            class="t-radio-button"
            name="bottom"
          >
            <input
              class="t-radio-button__former"
              readonly=""
              type="radio"
            />
            <span
              class="t-radio-button__input"
            />
            <span
              class="t-radio-button__label"
            >
              bottom
            </span>
          </label>
        </div>
        <button
          class="t-button t-button--theme-primary t-button--variant-base"
          style="margin-left: 16px;"
        >
          Open
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CurrentDOMUsageExample.jsx 1`] = `
<DocumentFragment>
  <div
    style="position: relative; height: 400px; overflow: hidden; text-align: center; background: rgb(250, 250, 250); border: 1px solid #ebedf0; border-radius: 2px;"
  >
    <div
      style="height: 100%; padding: 48px;"
    >
      渲染在当前元素中。
      <div
        style="margin-top: 16px;"
      >
        <div
          class="t-radio-group t-radio-group-outline t-radio-group-small"
        >
          <label
            class="t-radio-button"
            name="left"
          >
            <input
              class="t-radio-button__former"
              readonly=""
              type="radio"
            />
            <span
              class="t-radio-button__input"
            />
            <span
              class="t-radio-button__label"
            >
              left
            </span>
          </label>
          <label
            class="t-radio-button t-is-checked"
            name="right"
          >
            <input
              checked=""
              class="t-radio-button__former"
              readonly=""
              type="radio"
            />
            <span
              class="t-radio-button__input"
            />
            <span
              class="t-radio-button__label"
            >
              right
            </span>
          </label>
          <label
            class="t-radio-button"
            name="top"
          >
            <input
              class="t-radio-button__former"
              readonly=""
              type="radio"
            />
            <span
              class="t-radio-button__input"
            />
            <span
              class="t-radio-button__label"
            >
              top
            </span>
          </label>
          <label
            class="t-radio-button"
            name="bottom"
          >
            <input
              class="t-radio-button__former"
              readonly=""
              type="radio"
            />
            <span
              class="t-radio-button__input"
            />
            <span
              class="t-radio-button__label"
            >
              bottom
            </span>
          </label>
        </div>
        <button
          class="t-button t-button--theme-primary t-button--variant-base"
          style="margin-left: 16px;"
        >
          Open
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DestroyOnCloseUsageExample.jsx 1`] = `
<DocumentFragment>
  <div>
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
    >
      Open
    </button>
  </div>
</DocumentFragment>
`;

exports[`FooterUsageExample.jsx 1`] = `
<DocumentFragment>
  <div>
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
    >
      Open
    </button>
  </div>
</DocumentFragment>
`;

exports[`ForceRenderUsageExample.jsx 1`] = `
<DocumentFragment>
  <div>
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
    >
      Open
    </button>
    <span>
      <div
        class="t-drawer t-drawer-right"
        style="z-index: 1500;"
        tabindex="-1"
      >
        <div
          class="t-drawer__mask"
          style="transition-duration: 300ms;"
        />
        <div
          class="t-drawer__content-wrapper t-drawer__content-wrapper-right"
          style="transition-duration: 300ms; width: 300px;"
        >
          <h5
            class="t-drawer__header"
          >
            Drawer
          </h5>
          <div
            class="t-drawer__close-btn"
          >
            <svg
              class="t-icon t-icon-close"
              version="1.1"
              viewBox="0 0 1024 1024"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M760.9780096 217.6L806.2328448 262.85483392 557.312 511.744 806.2328448 760.6580096 760.9780096 805.9128448 512.064 556.992 263.17483392 805.9128448 217.92 760.6580096 466.816 511.744 217.92 262.85483392 263.17483392 217.6 512.064 466.496 760.9780096 217.6Z"
                fill-opacity=".9"
                fill-rule="evenodd"
              />
            </svg>
          </div>
          <div
            class="t-drawer__body"
          >
            <p>
              This is a drawer
            </p>
          </div>
        </div>
      </div>
    </span>
  </div>
</DocumentFragment>
`;

exports[`ModeUsageExample.jsx 1`] = `
<DocumentFragment>
  <div>
    <div
      class="t-radio-group t-radio-group-outline t-radio-group-small"
    >
      <label
        class="t-radio-button"
        name="left"
      >
        <input
          class="t-radio-button__former"
          readonly=""
          type="radio"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          left
        </span>
      </label>
      <label
        class="t-radio-button t-is-checked"
        name="right"
      >
        <input
          checked=""
          class="t-radio-button__former"
          readonly=""
          type="radio"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          right
        </span>
      </label>
      <label
        class="t-radio-button"
        name="top"
      >
        <input
          class="t-radio-button__former"
          readonly=""
          type="radio"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          top
        </span>
      </label>
      <label
        class="t-radio-button"
        name="bottom"
      >
        <input
          class="t-radio-button__former"
          readonly=""
          type="radio"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          bottom
        </span>
      </label>
    </div>
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
      style="margin-left: 16px;"
    >
      Open
    </button>
  </div>
</DocumentFragment>
`;

exports[`NoMaskUsageExample.jsx 1`] = `
<DocumentFragment>
  <div>
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
    >
      Open
    </button>
  </div>
</DocumentFragment>
`;

exports[`PlacementUsageExample.jsx 1`] = `
<DocumentFragment>
  <div>
    <div
      class="t-radio-group t-radio-group-outline t-radio-group-small"
    >
      <label
        class="t-radio-button"
        name="left"
      >
        <input
          class="t-radio-button__former"
          readonly=""
          type="radio"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          left
        </span>
      </label>
      <label
        class="t-radio-button t-is-checked"
        name="right"
      >
        <input
          checked=""
          class="t-radio-button__former"
          readonly=""
          type="radio"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          right
        </span>
      </label>
      <label
        class="t-radio-button"
        name="top"
      >
        <input
          class="t-radio-button__former"
          readonly=""
          type="radio"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          top
        </span>
      </label>
      <label
        class="t-radio-button"
        name="bottom"
      >
        <input
          class="t-radio-button__former"
          readonly=""
          type="radio"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          bottom
        </span>
      </label>
    </div>
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
      style="margin-left: 16px;"
    >
      Open
    </button>
  </div>
</DocumentFragment>
`;

exports[`SizeUsageExample.jsx 1`] = `
<DocumentFragment>
  <div>
    <div
      class="t-radio-group t-radio-group-outline t-radio-group-small"
    >
      <label
        class="t-radio-button"
        name="left"
      >
        <input
          class="t-radio-button__former"
          readonly=""
          type="radio"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          left
        </span>
      </label>
      <label
        class="t-radio-button t-is-checked"
        name="right"
      >
        <input
          checked=""
          class="t-radio-button__former"
          readonly=""
          type="radio"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          right
        </span>
      </label>
      <label
        class="t-radio-button"
        name="top"
      >
        <input
          class="t-radio-button__former"
          readonly=""
          type="radio"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          top
        </span>
      </label>
      <label
        class="t-radio-button"
        name="bottom"
      >
        <input
          class="t-radio-button__former"
          readonly=""
          type="radio"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          bottom
        </span>
      </label>
    </div>
    <div
      style="margin-top: 16px;"
    >
      <div
        class="t-radio-group t-radio-group-outline t-radio-group-small"
      >
        <label
          class="t-radio-button t-is-checked"
          name="small"
        >
          <input
            checked=""
            class="t-radio-button__former"
            readonly=""
            type="radio"
          />
          <span
            class="t-radio-button__input"
          />
          <span
            class="t-radio-button__label"
          >
            small(300px)
          </span>
        </label>
        <label
          class="t-radio-button"
          name="middle"
        >
          <input
            class="t-radio-button__former"
            readonly=""
            type="radio"
          />
          <span
            class="t-radio-button__input"
          />
          <span
            class="t-radio-button__label"
          >
            middle(500px)
          </span>
        </label>
        <label
          class="t-radio-button"
          name="large"
        >
          <input
            class="t-radio-button__former"
            readonly=""
            type="radio"
          />
          <span
            class="t-radio-button__input"
          />
          <span
            class="t-radio-button__label"
          >
            large(760px)
          </span>
        </label>
        <label
          class="t-radio-button"
          name="200px"
        >
          <input
            class="t-radio-button__former"
            readonly=""
            type="radio"
          />
          <span
            class="t-radio-button__input"
          />
          <span
            class="t-radio-button__label"
          >
            200
          </span>
        </label>
        <label
          class="t-radio-button"
          name="400px"
        >
          <input
            class="t-radio-button__former"
            readonly=""
            type="radio"
          />
          <span
            class="t-radio-button__input"
          />
          <span
            class="t-radio-button__label"
          >
            400px
          </span>
        </label>
        <label
          class="t-radio-button"
          name="50%"
        >
          <input
            class="t-radio-button__former"
            readonly=""
            type="radio"
          />
          <span
            class="t-radio-button__input"
          />
          <span
            class="t-radio-button__label"
          >
            50%
          </span>
        </label>
      </div>
    </div>
    <div
      style="margin-top: 16px;"
    >
      <button
        class="t-button t-button--theme-primary t-button--variant-base"
      >
        Open
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`base.jsx 1`] = `
<DocumentFragment>
  <div>
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
    >
      Open
    </button>
  </div>
</DocumentFragment>
`;

exports[`operation.jsx 1`] = `
<DocumentFragment>
  <div>
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
    >
      Open
    </button>
  </div>
</DocumentFragment>
`;
